Controllers update New layout with unit price and total price Fixed not proportional division of items Misc